fix: server process envs & stopping